grammar.js
    client_config: $ => repeat($._option),

    _option: $ => choice(
        $.host,
        $.match,
        $.add_keys_to_agent,
        $.address_family,
        $.batch_mode,
        $.bind_address,
        $.bind_interface,
        $.canonical_domains,
        $.canonicalize_fallback_local,
        $.canonicalize_hostname,
        $.canonicalize_max_dots,
        $.canonicalize_permitted_cnames,
        $.ca_signature_algorithms,
        $.certificate_file,
        $.challenge_response_authentication,
        $.check_host_ip,
        $.cipher,
        $.ciphers,
        $.clear_all_forwardings,
        $.compression,
        $.connection_attempts,
        $.connect_timeout,
        $.control_master,
        $.control_path,
        $.control_persist,
        $.dynamic_forward,
        $.enable_escape_commandline,
        $.enable_ssh_keysign,
        $.escape_char,
        $.exit_on_forward_failure,
        $.fingerprint_hash,
        $.fork_after_authentication,
        $.forward_agent,
        $.forward_x11,
        $.forward_x11_timeout,
        $.forward_x11_trusted,
        $.gateway_ports,
        $.global_known_hosts_file,
        $.gssapi_authentication,
        $.gssapi_client_identity,
        $.gssapi_delegate_credentials,
        $.gssapi_key_exchange,
        $.gssapi_renewal_forces_rekey,
        $.gssapi_server_identity,
        $.gssapi_trust_dns,
        $.gssapi_kex_algorithms,
        $.hash_known_hosts,
        $.hostbased_accepted_algorithms,
        $.hostbased_authentication,
        $.host_key_algorithms,
        $.host_key_alias,
        $.hostname,
        $.identities_only,
        $.identity_agent,
        $.identity_file,
        $.ignore_unknown,
        $.include,
        $.ip_qos,
        $.kbd_interactive_authentication,
        $.kbd_interactive_devices,
        $.kex_algorithms,
        $.known_hosts_command,
        $.local_command,
        $.local_forward,
        $.log_level,
        $.log_verbose,
        $.macs,
        $.no_host_authentication_for_localhost,
        $.number_of_password_prompts,
        $.password_authentication,
        $.permit_local_command,
        $.permit_remote_open,
        $.pkcs11_provider,
        $.port,
        $.preferred_authentications,
        $.protocol,
        $.proxy_command,
        $.proxy_jump,
        $.proxy_use_fdpass,
        $.pubkey_accepted_algorithms,
        $.pubkey_accepted_key_types,
        $.pubkey_authentication,
        $.rekey_limit,
        $.remote_command,
        $.remote_forward,
        $.request_tty,
        $.required_rsa_size,
        $.revoked_host_keys,
        $.security_key_provider,
        $.send_env,
        $.server_alive_count_max,
        $.server_alive_interval,
        $.session_type,
        $.set_env,
        $.stdin_null,
        $.stream_local_bind_mask,
        $.stream_local_bind_unlink,
        $.strict_host_key_checking,
        $.syslog_facility,
        $.tcp_keep_alive,
        $.keep_alive,
        $.tunnel,
        $.tunnel_device,
        $.update_host_keys,
        $.use_keychain,
        $.use_roaming,
        $.user,
        $.user_known_hosts_file,
        $.verify_host_key_dns,
        $.visual_host_key,
        $.xauth_location,
    ),

    host: $ => option(
        'Host',
        $.host_value
    ),
    host_value: $ => alias($.pattern, "host_value"),

    dynamic_forward: $ => option(
        'DynamicForward',
        $.dynamic_forward_value
    ),
    dynamic_forward_value: $ => /\S.*/,

    enable_escape_commandline: $ => option(
        'EnableEscapeCommandline',
        $.enable_escape_commandline_value
    ),
    enable_escape_commandline_value: $ => alias($.boolean, "enable_escape_commandline_value"),

    enable_ssh_keysign: $ => option(
        'EnableSSHKeysign',
        $.enable_ssh_keysign_value
    ),
    enable_ssh_keysign_value: $ => alias($.boolean, "enable_ssh_keysign_value"),

    escape_char: $ => option(
        'EscapeChar',
        $.escape_char_value
    ),
    escape_char_value: $ => choice('none', /(\^\w|[^\^])/),

    fingerprint_hash: $ => option(
        'FingerprintHash',
        $.fingerprint_hash_value
    ),
    fingerprint_hash_value: $ => choice('md5', 'sha256'),

    fork_after_authentication: $ => option(
        'ForkAfterAuthentication',
        $.fork_after_authentication_value
    ),
    fork_after_authentication_value: $ => alias($.boolean,
        "fork_after_authentication_value"),

    forward_agent: $ => option(
        'ForwardAgent',
        $.forward_agent_value
    ),
    forward_agent_value: $ => /\S.*/,

    forward_x11: $ => option(
        'ForwardX11',
        $.forward_x11_value
    ),
    forward_x11_value: $ => alias($.boolean, "forward_x11_value"),

    forward_x11_timeout: $ => option(
        'ForwardX11Timeout',
        $.forward_x11_timeout_value
    ),
    forward_x11_timeout_value: $ => alias($.time_format,
        "forward_x11_timeout_value"),

    forward_x11_trusted: $ => option(
        'ForwardX11Trusted',
        $.forward_x11_trusted_value
    ),
    forward_x11_trusted_value: $ => alias($.boolean,
        "forward_x11_trusted_value"),

    gateway_ports: $ => option(
        'GatewayPorts',
        $.gateway_ports_value
    ),
    gateway_ports_value: $ => alias($.boolean, "gateway_ports_value"),
