test/corpus/forward_x11.txt
==================
forward X11 = yes
==================

ForwardX11 yes

---

(client_config
  (forward_x11
    (forward_x11_value)))

==================
forward X11 = Yes
==================

ForwardX11 Yes

---

(client_config
  (forward_x11
    (forward_x11_value)))

==================
forward X11 = true
==================

ForwardX11 true

---

(client_config
  (forward_x11
    (forward_x11_value)))

==================
forward X11 = True
==================

ForwardX11 True

---

(client_config
  (forward_x11
    (forward_x11_value)))

==================
forward X11 = no
==================

ForwardX11 no

---

(client_config
  (forward_x11
    (forward_x11_value)))

==================
forward X11 = No
==================

ForwardX11 No

---

(client_config
  (forward_x11
    (forward_x11_value)))

==================
forward X11 = false
==================

ForwardX11 false

---

(client_config
  (forward_x11
    (forward_x11_value)))

==================
forward X11 = False
==================

ForwardX11 False

---

(client_config
  (forward_x11
    (forward_x11_value)))

==================
use irregular casing
==================

forWARdX11 yes

---

(client_config
  (forward_x11
    (forward_x11_value)))

==================
can use equals sign
==================

forWARdX11=yes

---

(client_config
  (forward_x11
    (forward_x11_value)))

==================
can use equals sign with whitespace
==================

forWARdX11 = yes

---

(client_config
  (forward_x11
    (forward_x11_value)))

==================
can be specified after host
==================

Host example.com
  forWARdX11 no

---

(client_config
  (host
    (host_value))
  (forward_x11
    (forward_x11_value)))

==================
detect invalid values
==================

forWARdX11 ja

---

(client_config
  (ERROR
    (UNEXPECTED 'j')))

==================
requires whitespace after key
==================

forWARdX11"yes"

---

(client_config
  (ERROR))
