test/corpus/forward_x11_trusted.txt
==================
forward X11 trust = yes
==================

ForwardX11Trusted yes

---

(client_config
  (forward_x11_trusted
    (forward_x11_trusted_value)))

==================
forward X11 trust = Yes
==================

ForwardX11Trusted Yes

---

(client_config
  (forward_x11_trusted
    (forward_x11_trusted_value)))

==================
forward X11 trust = true
==================

ForwardX11Trusted true

---

(client_config
  (forward_x11_trusted
    (forward_x11_trusted_value)))

==================
forward X11 trust = True
==================

ForwardX11Trusted True

---

(client_config
  (forward_x11_trusted
    (forward_x11_trusted_value)))

==================
forward X11 trust = no
==================

ForwardX11Trusted no

---

(client_config
  (forward_x11_trusted
    (forward_x11_trusted_value)))

==================
forward X11 trust = No
==================

ForwardX11Trusted No

---

(client_config
  (forward_x11_trusted
    (forward_x11_trusted_value)))

==================
forward X11 trust = false
==================

ForwardX11Trusted false

---

(client_config
  (forward_x11_trusted
    (forward_x11_trusted_value)))

==================
forward X11 trust = False
==================

ForwardX11Trusted False

---

(client_config
  (forward_x11_trusted
    (forward_x11_trusted_value)))

==================
use irregular casing
==================

FORwardX11TrUSted yes

---

(client_config
  (forward_x11_trusted
    (forward_x11_trusted_value)))

==================
can use equals sign
==================

FORwardX11TrUSted=yes

---

(client_config
  (forward_x11_trusted
    (forward_x11_trusted_value)))

==================
can use equals sign with whitespace
==================

FORwardX11TrUSted = yes

---

(client_config
  (forward_x11_trusted
    (forward_x11_trusted_value)))

==================
can use tab character
==================

FORwardX11TrUSted	"yes"

---

(client_config
  (forward_x11_trusted
    (forward_x11_trusted_value)))

==================
can be specified after host
==================

Host example.com
  FORwardX11TrUSted no

---

(client_config
  (host
    (host_value))
  (forward_x11_trusted
    (forward_x11_trusted_value)))

==================
detect invalid values
==================

FORwardX11TrUSted ja

---

(client_config
  (ERROR
    (UNEXPECTED 'j')))

==================
requires whitespace after key
==================

FORwardX11TrUSted"yes"

---

(client_config
  (ERROR))
