test/corpus/gateway_ports.txt
==================
gateway ports = yes
==================

GatewayPorts yes

---

(client_config
  (gateway_ports
    (gateway_ports_value)))

==================
gateway ports = Yes
==================

GatewayPorts Yes

---

(client_config
  (gateway_ports
    (gateway_ports_value)))

==================
gateway ports = true
==================

GatewayPorts true

---

(client_config
  (gateway_ports
    (gateway_ports_value)))

==================
gateway ports = True
==================

GatewayPorts True

---

(client_config
  (gateway_ports
    (gateway_ports_value)))

==================
gateway ports = no
==================

GatewayPorts no

---

(client_config
  (gateway_ports
    (gateway_ports_value)))

==================
gateway ports = No
==================

GatewayPorts No

---

(client_config
  (gateway_ports
    (gateway_ports_value)))

==================
gateway ports = false
==================

GatewayPorts false

---

(client_config
  (gateway_ports
    (gateway_ports_value)))

==================
gateway ports = False
==================

GatewayPorts False

---

(client_config
  (gateway_ports
    (gateway_ports_value)))

==================
use irregular casing
==================

GateWAYpORts yes

---

(client_config
  (gateway_ports
    (gateway_ports_value)))

==================
can use equals sign
==================

GateWAYpORts=yes

---

(client_config
  (gateway_ports
    (gateway_ports_value)))

==================
can use equals sign with whitespace
==================

GateWAYpORts = yes

---

(client_config
  (gateway_ports
    (gateway_ports_value)))

==================
can use tab character
==================

GateWAYpORts	"yes"

---

(client_config
  (gateway_ports
    (gateway_ports_value)))

==================
can be specified after host
==================

Host example.com
  GateWAYpORts no

---

(client_config
  (host
    (host_value))
  (gateway_ports
    (gateway_ports_value)))

==================
detect invalid values
==================

GateWAYpORts ja

---

(client_config
  (ERROR
    (UNEXPECTED 'j')))

==================
requires whitespace after key
==================

GateWAYpORts"no"

---

(client_config
  (ERROR))
